@@ -11,7 +11,7 @@ analyzeFolder(myfolder, htmlPlots = TRUE, verbose = TRUE,
   nFormants = 3, pitchMethods = c("autocor", "spec", "dom"),
   entropyThres = 0.6, pitchFloor = 75, pitchCeiling = 3500,
   priorMean = 300, priorSD = 6, priorPlot = FALSE, nCands = 1,
-  minVoicedCands = "autom", domThres = 0.1, domSmooth = 220,
+  minVoicedCands = NULL, domThres = 0.1, domSmooth = 220,
   autocorThres = 0.7, autocorSmooth = NULL, cepThres = 0.3,
   cepSmooth = NULL, cepZp = 0, specThres = 0.3, specPeak = 0.35,
   specSinglePeakCert = 0.4, specHNRslope = 0.8, specSmooth = 150,
